[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://sprites/new highscore.png" type="Texture" id=3]
[ext_resource path="res://sounds/highscore_tune.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.5
margin_top = 16.0
margin_right = 106.5
margin_bottom = 80.0
color = Color( 0.243137, 0.243137, 0.243137, 0.760784 )

[node name="Score" type="Label" parent="."]
margin_left = 128.0
margin_top = 16.0
margin_right = 352.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="GameOverScreen" type="Node" parent="."]

[node name="Background" type="ColorRect" parent="GameOverScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -184.0
margin_right = 192.0
margin_bottom = 200.0
color = Color( 0.243137, 0.243137, 0.243137, 0.937255 )

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -184.0
margin_right = 192.0
margin_bottom = -104.0
color = Color( 0.180392, 0.180392, 0.180392, 0.933333 )

[node name="Title" type="Label" parent="GameOverScreen"]
visible = false
margin_left = 80.0
margin_top = 176.0
margin_right = 400.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
text = "You died!"
align = 1
valign = 1

[node name="Score" type="Label" parent="GameOverScreen"]
visible = false
margin_left = 80.0
margin_top = 304.0
margin_right = 235.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 3 )
text = "Score:"

[node name="HighScore" type="Label" parent="GameOverScreen"]
visible = false
margin_left = 80.0
margin_top = 368.0
margin_right = 272.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 3 )
text = "High Score:"

[node name="ScoreData" type="Label" parent="GameOverScreen"]
visible = false
margin_left = 304.0
margin_top = 304.0
margin_right = 416.0
margin_bottom = 341.0
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="HighScoreData" type="Label" parent="GameOverScreen"]
visible = false
margin_left = 304.0
margin_top = 368.0
margin_right = 416.0
margin_bottom = 405.0
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="ResetButton" type="Button" parent="GameOverScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 104.0
margin_right = 146.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 5 )
text = "Reset"

[node name="MainMenuButton" type="Button" parent="GameOverScreen"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 104.0
margin_right = 2.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"

[node name="NewHighScore" type="Sprite" parent="GameOverScreen"]
visible = false
position = Vector2( 237, 295 )
rotation = 0.184701
scale = Vector2( 0.251264, 0.251264 )
texture = ExtResource( 3 )

[node name="HighScoreTune" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[connection signal="pressed" from="GameOverScreen/ResetButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverScreen/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
